Attempt to fix code pen bug with overflow scroll.

--- a/app/styles/partials/_home.scss
+++ b/app/styles/partials/_home.scss
@@ -123,5 +123,5 @@ li p {
 }
 
 .pen-msg + div {
-    overflow: auto;
+    overflow: scroll;
 }
